Bug 1037869 - Fix remaining Latin1 string issues. r=terrence